fix(chip-set): correctly align leading icons inside chips
Since the icon height is set to be smaller than the chip itself, there must be an equal amount of margin around them (left, top and bottom).

--- a/src/components/chip-set/chip-set.scss
+++ b/src/components/chip-set/chip-set.scss
@@ -33,7 +33,7 @@ $mdc-text-field-fullwidth-bottom-line-color: $lime-text-field-bottom-line-color;
 
 limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
     background-color: var(--icon-background-color, transparent);
-    margin-left: pxToRem(-12) !important;
+    margin-left: pxToRem(-11) !important;
     color: var(--icon-color, rgba(0,0,0,.54));
 }
 
